tests/baselines/reference/mappedTypeInferenceFromApparentType.errors.txt
mappedTypeInferenceFromApparentType.ts(10,1): error TS2322: Type 'foo' is not assignable to type 'bar'.
  Types of parameters 'target' and 'source' are incompatible.
    Type '{ [K in keyof U]: Obj[K]; }' is not assignable to type '{ [x: string]: number; }'.
      Index signature for type 'string' is missing in type 'number[]'.


==== mappedTypeInferenceFromApparentType.ts (1 errors) ====
    type Obj = {
        [s: string]: number;
    };
    
    type foo = <T>(target: { [K in keyof T]: T[K] }) => void;
    type bar = <U extends string[]>(source: { [K in keyof U]: Obj[K] }) => void;
    
    declare let f: foo;
    declare let b: bar;
    b = f;
    ~
!!! error TS2322: Type 'foo' is not assignable to type 'bar'.
!!! error TS2322:   Types of parameters 'target' and 'source' are incompatible.
!!! error TS2322:     Type '{ [K in keyof U]: Obj[K]; }' is not assignable to type '{ [x: string]: number; }'.
!!! error TS2322:       Index signature for type 'string' is missing in type 'number[]'.